--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,10 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:1wczVBcgmXBM+ngMJ7HEtV70Cz6mSsxwW8LoojDbDvc=
 APP_DEBUG=true
 APP_URL=http://localhost
+
+FRONTEND_URL=http://localhost:3000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -57,3 +59,15 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GUARDIAN_URL=https://content.guardianapis.com
+GUARDIAN_API_KEY=test
+
+NEWS_URL=https://newsapi.org/v2
+NEWS_API_KEY=c95ec738abe74b708871b99d6673cc85
+
+MEDIA_STACK_URL=http://api.mediastack.com/v1
+MEDIA_STACK_API_KEY=6490528b65c9d28894748cf10c6d0a52
+
+NEWYORK_TIMES_URL=https://api.nytimes.com/svc/
+NEWYORK_TIMES_API_KEY=LqRN1w7XrZYdVTTo5aYSwLlVtJXBEcRS
